# AFO_Kingdom

./: .afo.swp  .antigravity-rules  .coverage.Mac.36952.Xqckjtex  .cursorrules  .env  .env.afo.example  .env.example  .env.local.example.notify  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .trivyignore  AFO_EVOLUTION_LOG.md  AGENTS.md  AGENTS.md.backup  AGENTS.md.bak.20260101-135703  AUTOMATED_DEBUGGING_SYSTEM_COMPLETE.md  AUTO_HEALING_SYSTEM_FINAL_REPORT.md  CLAUDE.md  CODEX.md  COMPLETE_DEBUGGING_SYSTEM_ENHANCEMENT.md  COMPLETE_FINAL_VERIFICATION_REPORT.md  COMPLETE_PACKAGE_INSTALLATION_REPORT.md  COMPLETE_SYSTEM_VERIFICATION.md  COMPREHENSIVE_PACKAGE_VERIFICATION.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  CONTEXT7_SEQUENTIAL_THINKING_FINAL_REPORT.md  CONTRIBUTING.md  CURRENT_STATUS_REALISTIC_ASSESSMENT.md  CYCLONEDX_DEEP_ANALYSIS_COMPLETE_REPORT.md  DASHBOARD_README.md  DEPENDENCY_VERIFICATION_COMPLETE_REPORT.md  Dockerfile  Dockerfile.mipro  ENTRYPOINT_FIX.md  ERROR_WARNING_FIX_REPORT.md  FINAL_COMPLETE_VERIFICATION.md  FINAL_OPTIMIZATION_COMPLETE.md  FINAL_PACKAGE_VERIFICATION_SUMMARY.md  (+163 more)
.backup/dashboard_legacy/: kingdom_status_report.html
.claude/: settings.local.json.backup
.claude/commands/: check.md  dryrun.md  evidence.md  (+6 more)
.cursor/: environment.json  mcp.json  mcp.json.optimized
.gemini/: GEMINI.md  settings.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  mergify.yml  pull_request_template.md
AFO_Stealth_Profile/: Local State  first_party_sets.db
AICPA/: AFO AICPA_JULIE 122125.md  Aicpa 애이전트 펌 군단.md
artifacts/: fallback_silence.m4a  mipro_colab_final_result.json  phase6_context7_list_20251229_102006.json  phase6_contract_summary_20251229_102006.md  phase6_health_20251229_101930.json  phase6_health_20251229_102006.json  phase6_openapi_20251229_102006.json  phase6_skills_20251229_102006.json  ssot_colab_hashes_20260102_181600.txt  ssot_colab_manifest_20260102_181600.json  ssot_colab_reproducibility_info.md  ticket016_mlx_monitor_ssot.jsonl  timeline_state_capcut_smoke.json
config/: alliances.json  family_hub.yaml
contracts/: mipro_job.schema.json
data/: family_data.json  family_hub_data.json
demonstration/: janus_vision_demo.py
docs/: 010126_checklist_1.md  010126_checklist_2.md  010126_checklist_3.md  010226_CheckList_1.md  010726_CheckList_1.md  010726_CheckList_2.md  010826_CheckList_3.md  010826_CheckList_3_REPORT.md  AFO 121825 agent.md  AFO 121825 checklist-1.md  AFO AICPA_TAX_AI.md  AFO Aicpa 애이전트 펌 군단.md  AFO 배포.md  AFO_122225_System Stabilization Walkthrough.md  AFO_CHANCELLOR_GRAPH_SPEC.md  AFO_CHECKLIST_122425.md  AFO_CODEBASE_AUDIT_2026_01_07.md  AFO_EVOLUTION_LOG.md  AFO_FIELD_MANUAL.md  AFO_FINAL_HANDOVER.md  AFO_FINAL_SSOT.md  AFO_FRONTEND_ARCH.md  AFO_GENESIS_LEARNINGS.md  AFO_GENUI_CAPABILITIES.md  AFO_KINGDOM_2026_PROJECT_COMPLETION_REPORT.md  AFO_KINGDOM_MAIN.md  AFO_KINGDOM_OPEN_SOURCE_MANIFEST.md  AFO_KINGDOM_SSOT_LOCKED_REPORT.md  AFO_MOE_ARCHITECTURE.md  AFO_ROYAL_LIBRARY.md  AFO_SBOM.md  AFO_SYSTEM_STABILIZATION.md  AFO_SYSTEM_STABILIZATION_PH0-PH7_COMPLETED.md  AFO_WIDGET_BLUEPRINTS.md  AICPA_Enhancement_Plan.md  ANTIGRAVITY 123025.md  ANTIGRAVITY_AGENTS_MD_INTEGRATION_REPORT.md  ANTIGRAVITY_CHANCELLOR_INTEGRATION_ANALYSIS.md  ANTIGRAVITY_CHANCELLOR_INTEGRATION_COMPLETE.md  ANTIGRAVITY_CHANCELLOR_SYNC_VERIFICATION.md  (+139 more)
md/: agents.md  claude.md  cursor.md  grok.md  mcp_definition.md
monitoring/: alert_rules.yml  prometheus.yml
reports/: AFO_REPORT_20260109_094405.md  AFO_REPORT_20260109_094543.md  mypy_phase10_baseline.txt  mypy_phase10_baseline_final.txt  mypy_phase10_baseline_v2.txt  type_audit_report_20260109_103056.md
scripts/: __init__.py  afo_dashboard.sh  afo_dgm_evolve.sh  afo_manifest.sh  ai_type_inference.py  audit_docs_ssot.py  auto_fix_types.py  auto_healing_mypy.py  auto_healing_ruff.py  auto_lint_fix.py  auto_quality_gate.py  auto_recon.py  auto_verification_complete.py  automate_scorecard.py  backup_restore.py  bench_matrix_multiplication.py  bench_numba_bracket_kernel.py  bench_tax_engine_latency.py  chancellor_ci_integration.py  check_package_install.py  check_registered_routes.py  check_server_startup_logs.py  check_skill_dependencies.py  check_sqlmodel_dependency.py  ci_hardening_gate.sh  ci_lock_protocol.sh  ci_trinity_check.py  collect_ci_quality_metrics.py  collect_weekly_metrics.py  comprehensive_system_check.py  context7_sequential_analysis.py  continuous_health_check.py  create_royal_analytics.py  debt_gate_snapshot.sh  debug_julie_import.py  debug_organs.py  debug_router_loading.py  debug_router_registration.py  demo_genui_trinity_widget.py  demo_matrix_stream.py  (+261 more)
services/: trinity_score_monitor.py
skills/: marketplace.json
ssot_sources/: irs_registry.yaml
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  test_5_pillars.py  test_antigravity_flags.py  test_chancellor_graph.py  test_chancellor_router_integration.py  test_chancellor_sage_integration.py  test_genui_orchestrator.py  test_guardrails_examples_integration.py  test_persona_service_integration.py  test_ph_fin_01_csv_inbox_labeler.py  test_pure_antigravity.py  test_risk_score.py  test_sage_validation.py  test_serenity_live.py  test_stealth.py  test_strategists.py  test_tigers.py  test_trinity_calculator_integration.py  test_trinity_manager.py  test_trinity_manager_edge.py  test_trinity_score.py  test_trinity_score_edge_cases.py  verify_stealth_logic.py
tickets/: TICKET-001.md  TICKET-002.md  TICKET-003.md  TICKET-004.md  TICKET-005.md  TICKET-006.md  TICKET-007.md  TICKET-008.md  TICKET-009.md  TICKET-010.md  TICKET-011.md  TICKET-012.md  TICKET-013.md  TICKET-014.md  TICKET-015.md  TICKET-017.md  TICKET-018.md  TICKET-019.md  TICKET-031.md  TICKET-033.md  TICKET-042.md  TICKET-043.md  TICKET-044.md  TICKET-045.md  TICKET-046.md  TICKET-047.md  TICKET-076.md  TICKET-MIPROv2-EXECUTION.md  TICKET-MIPROv2-LOCAL-EXECUTION.md  TICKET-SSOT-TEMPLATE.md
tools/: audit_truth.sh  audit_truth_final.sh  audit_truth_v2.sh  guardian_sentinel.py  test_path.py
~/: .tmux.conf
(+2262 files in other folders)
