[project]
name = "afo-kingdom"
version = "1.0.0"
description = "AFO Kingdom - Unified Monorepo (AFO Core, TRINITY-OS, SixXon, Dashboard)"
authors = [{ name = "AFO Kingdom", email = "afo@kingdom.dev" }]
package-mode = false
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.56.0,<2",
    "ragas>=0.4.1,<0.5",
    "boto3>=1.42.14,<2",
    "python-frontmatter>=1.1.0,<2",
    "kafka-python>=2.3.0,<3",
    "sentence-transformers>=5.2.0,<6",
    "sqlmodel>=0.0.14,<0.0.15",
    "sunoai>=1.0.7,<2",
    "neo4j>=6.0.3,<7",
    "fastapi>=0.128.0",
    "uvicorn>=0.38.0",
    "afo-core",
    "dspy-ai>=3.0.4",
    "dspy>=3.0.4",
    # mlx-examples[musicgen] - removed (local submodule, not on PyPI)
]

[project.urls]
homepage = "https://github.com/afo-kingdom"
documentation = "https://afo-kingdom.dev/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["packages"]
include = ["afo-core*", "trinity-os*", "dashboard*"]
exclude = ["*test*", "*tests*", "*__pycache__*", "*.egg-info*"]

[tool.poetry.dependencies]
afo-core = { path = "packages/afo-core", develop = true }

[dependency-groups]
dev = [
    "pytest>=7.0,<8",
    "pytest-cov>=4.0,<6",
    "pytest-asyncio>=0.23,<1.0",
    "mypy>=1.0,<2",
    "ruff>=0.12.0",
    "psutil>=7.1.3,<8",
    "redis>=7.1.0,<8",
    "langchain>=1.2.0,<2",
    "openai>=2.14.0,<3",
    "uvicorn>=0.38.0,<0.39",
    "black>=25.12.0,<26",
    "isort>=7.0.0,<8",
    "pre-commit>=4.5.1,<5",
    "qdrant-client>=1.16.2,<2",
    "pgvector>=0.4.2,<0.5",
    "pymongo>=4.15.5,<5",
    "ragas>=0.4.1,<0.5",
    "chromadb>=1.3.7,<2",
    "eth-account>=0.13.7,<0.14",
    "markdown>=3.10,<4",
    "neo4j>=6.0.3,<7",
    "web3>=7.14.0,<8",
    "python-frontmatter>=1.1.0,<2",
    "kafka-python>=2.3.0,<3",
    "sunoai>=1.0.7,<2",
    "docker>=7.1.0,<8",
    "gitpython>=3.1.45,<4",
    "python-docx>=1.2.0,<2",
    "pytest-xdist>=3.8.0",
    "dspy-ai>=2.5.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "packages/afo-core",
    "packages/trinity-os",
    "packages/sixXon",
]

[tool.hatch.build.targets.wheel]
include = [
    "packages/afo-core",
    "packages/trinity-os",
    "packages/sixXon",
]

[tool.ruff]
target-version = "py312"
line-length = 120
preview = false
cache-dir = ".ruff_cache"
exclude = [
    ".git",
    ".venv",
    ".venv*",
    "venv",
    "venv_rag",
    "__pycache__",
    "node_modules",
    "*.egg-info",
    "dist",
    "build",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "site-packages",
    "packages/trinity-os/tests",
    "tests",
    "**/*.metallib",
    "**/*.dylib",
    "tools",
    "test_*.py",
    "conftest.py",
    "packages/afo-core/tests",
    "packages/afo-core/scripts"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",
    "E402",
    "D203",
    "D212",
    "COM812",
    "B008",
    "B904",
    "RUF001",
    "RUF002",
    "RUF003",
    "ANN401",
    "CPY001",
    "PLC0415",
    "DOC201",
    "BLE001",
    "PLR2004",
    "PTH",
    "C901",
    "PLR0912",
    "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "D104"]
"scripts/**" = ["T201", "D", "ANN", "E402", "F811"]
"verify_full_stack.py" = ["T201", "D", "E402", "S106"]
"tests/**" = ["S101", "ARG", "PLR0913", "D", "ANN", "PLR2004", "BLE001", "DOC201", "E402", "SLF001", "PLR6301", "SIM102"]
"packages/*/tests/**" = ["S101", "ARG", "PLR0913", "D", "ANN", "PLR2004", "BLE001", "DOC201", "E402", "SLF001"]
"**/api_server.py" = ["E402", "PLR0915", "PLC0415"]
"**/routers/*.py" = ["PLC0415", "E402"]
"**/routes/*.py" = ["PLC0415", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["AFO", "afo_soul_engine", "trinity_os", "sixXon"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 60

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "pydantic.Field"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
hardcoded-tmp-directory-extend = ["/app/tmp", "/var/run/app"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase"]
runtime-evaluated-decorators = [
    "pydantic.field_validator",
    "pydantic.model_validator",
    "pydantic.validator",
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "packages/afo-core:packages/trinity-os:/Users/brnestrm/AFO_Kingdom:typings"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
exclude = [
    "packages/trinity-os/tests",
    "tests",
    "conftest.py",
]

check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
strict_equality = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["services.trinity_score_monitor"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["services"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
addopts = "-v --no-cov"
norecursedirs = [".git", "__pycache__", ".venv", "node_modules"]
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 300

[tool.uv.workspace]
members = [
    "packages/afo-core",
]

[tool.uv.sources]
afo-core = { workspace = true, editable = true }
