[project]
name = "afo-kingdom"
version = "1.0.0"
description = "AFO Kingdom - Unified Monorepo (AFO Core, TRINITY-OS, SixXon, Dashboard)"
authors = [{ name = "AFO Kingdom", email = "afo@kingdom.dev" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.56.0,<2",
    "boto3>=1.42.14,<2",
    "python-frontmatter>=1.1.0,<2",
    "kafka-python>=2.3.0,<3",
    "sentence-transformers>=5.2.0,<6",
    "sqlmodel>=0.0.14,<0.0.15",
    "sunoai>=1.0.7,<2",
    "neo4j>=6.0.3,<7",
    "fastapi>=0.128.0",
    "uvicorn>=0.38.0",
    "afo-core",
    "dspy-ai>=3.0.4",
    "dspy>=3.0.4",
]

[project.urls]
homepage = "https://github.com/afo-kingdom"
documentation = "https://afo-kingdom.dev/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["packages"]
include = ["afo-core*", "trinity-os*", "dashboard*"]
exclude = ["*test*", "*tests*", "*__pycache__*", "*.egg-info*"]

[tool.uv.workspace]
members = [
    "packages/afo-core",
]

[tool.uv.sources]
afo-core = { workspace = true, editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
mypy_path = "packages/afo-core:packages/trinity-os:/Users/brnestrm/AFO_Kingdom:typings"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]
exclude = [
    "packages/trinity-os/tests",
    "tests",
    "conftest.py",
]

check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
ignore_missing_imports = true
warn_unused_ignores = false
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["services.trinity_score_monitor"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["services"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
asyncio_mode = "auto"
addopts = "-v --cov=packages/afo-core --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=85"
norecursedirs = [".git", "__pycache__", ".venv", "node_modules"]
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 300
